--- a/templates/main.html
+++ b/templates/main.html
@@ -1,20 +1,45 @@
-
 <!DOCTYPE html>
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Flot Examples: Basic Usage</title>
+	<title>Beer Fermentation Logger</title>
 	<link href="http://www.flotcharts.org/flot/examples/examples.css" rel="stylesheet" type="text/css">
 	<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="http://www.flotcharts.org/flot/excanvas.min.js"></script><![endif]-->
 	<script language="javascript" type="text/javascript" src="http://www.flotcharts.org/flot/jquery.js"></script>
 	<script language="javascript" type="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
+	<script language="javascript" type="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.navigate.js"></script>
 	<script type="text/javascript">
 
 	$(function() {
 
 		var d1 = {{ tempdata }};
 
-		$.plot("#placeholder", [ d1 ]);
+		var data = [ d1 ],
+			placeholder = $("#placeholder");
+
+		var plot = $.plot(placeholder, data, {
+			series: {
+				lines: {
+					show: true
+				},
+				shadowSize: 0
+			},
+			xaxis: {
+				zoomRange: [0, {{ max_x_axis}}],
+				panRange: [0, {{ max_x_axis }}]
+			},
+			yaxis: {
+				zoomRange: [0, 100],
+				panRange: [0, 100]
+			},
+			zoom: {
+				interactive: true
+			},
+			pan: {
+				interactive: true
+			}
+		});
+
 
 	});
 
@@ -23,7 +48,7 @@
 <body>
 
 	<div id="header">
-		<h2>Fermentation Temperature Logger</h2>
+		<h2>Beer Fermentation Temperature Logger</h2>
 	</div>
 
 	<div id="content">
@@ -34,7 +59,7 @@
 
 		<p>An example plot of the fermentation temperature logger</p>
 
-		<p>Currently the temperature sensor is not hooked up to an active fermentation, it is just monitoring ambient temperature in the kitchen</p>
+		<p>Currently the temperature sensor is not hooked up to an active fermentation, it is just monitoring ambient temperature in the kitchen. You can zoom in and out of the chart area using your mouse wheel and click-and-drag.</p>
 
 	</div>
 
