modified the template text

--- a/templates/main.html
+++ b/templates/main.html
@@ -29,8 +29,8 @@
 				panRange: [0, {{ max_x_axis }}]
 			},
 			yaxis: {
-				zoomRange: [0, 100],
-				panRange: [0, 100]
+				zoomRange: [0, 120],
+				panRange: [0, 120]
 			},
 			zoom: {
 				interactive: true
@@ -57,7 +57,7 @@
 			<div id="placeholder" class="demo-placeholder"></div>
 		</div>
 
-		<p>An example plot of the fermentation temperature logger</p>
+		<p>This plot shows the temperature recorded by a temp sensor hooked up to an arduino.  The temperature is sent and recorded approximately once per minute, and the data is displayed here using Flask and Flot.</p>
 
 		<p>Currently the temperature sensor is not hooked up to an active fermentation, it is just monitoring ambient temperature in the kitchen. You can zoom in and out of the chart area using your mouse wheel and click-and-drag.</p>
 
