modified template text again

--- a/templates/main.html
+++ b/templates/main.html
@@ -59,7 +59,7 @@
 
 		<p>This plot shows the temperature recorded by a temp sensor hooked up to an arduino.  The temperature is sent and recorded approximately once per minute, and the data is displayed here using Flask and Flot.</p>
 
-		<p>Currently the temperature sensor is not hooked up to an active fermentation, it is just monitoring ambient temperature in the kitchen. You can zoom in and out of the chart area using your mouse wheel and click-and-drag.</p>
+		<p>Currently the temperature sensor is not hooked up to an active fermentation, it is just monitoring ambient temperature in the kitchen (but we will be resolving that issue shortly). You can zoom in and out of the chart area using your mouse wheel and click-and-drag.</p>
 
 	</div>
 
