--- a/templates/main.html
+++ b/templates/main.html
@@ -8,6 +8,7 @@
 	<script language="javascript" type="text/javascript" src="http://www.flotcharts.org/flot/jquery.js"></script>
 	<script language="javascript" type="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
 	<script language="javascript" type="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.navigate.js"></script>
+	<script language="javascript" type="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.time.js"></script>
 	<script type="text/javascript">
 
 	$(function() {
@@ -25,12 +26,15 @@
 				shadowSize: 0
 			},
 			xaxis: {
-				zoomRange: [0, {{ max_x_axis}}],
-				panRange: [0, {{ max_x_axis }}]
+				mode: "time",
+				// zoomRange: [1, {{ max_x_axis}}],
+				zoomRange: [600000, null],
+				panRange: [{{ min_x_axis }}, {{ max_x_axis }}]
 			},
 			yaxis: {
-				zoomRange: [0, 120],
-				panRange: [0, 120]
+				// zoomRange: [1, 120],
+				zoomRange: [2, null],
+				panRange: [55, 80]
 			},
 			zoom: {
 				interactive: true
