--- a/templates/main1.html
+++ b/templates/main1.html
@@ -50,7 +50,7 @@
 <body>
 
 	<div id="header">
-		<h2>Beer Fermentation Temperature Logger Test</h2>
+		<h2>Single Hop (Simcoe) Pale Ale</h2>
 	</div>
 
 	<div id="content">
@@ -61,11 +61,11 @@
 
 		<p>This plot shows the temperature recorded by a temp sensor hooked up to an arduino.  The temperature is sent and recorded approximately once per minute, and the data is displayed here using Flask and Flot.</p>
 
-		<p>Currently the temperature sensor is not hooked up to an active fermentation, it is just monitoring ambient temperature in the kitchen (but we will be resolving that issue shortly). You can zoom in and out of the chart area using your mouse wheel and click-and-drag.</p>
+		<p>Currently the temperature sensor is hooked up to a one gallon batch of a single hop pale ale.</p>
 
-		<p>To see other fermentation profiles, see the links below:</p>
+		<p>To see previous fermentation profiles, see the links below:</p>
 
-		<li><a href="{{ url_for('home_page') }}">Single Hop Simcoe</a></li>
+		<li><a href="{{ url_for('test_page') }}">Test Profile</a></li>
 
 	</div>
 
