Modified the template text a little bit for more clarification and detail on each temperature profile

--- a/templates/main.html
+++ b/templates/main.html
@@ -59,13 +59,13 @@
 			<div id="placeholder" class="demo-placeholder"></div>
 		</div>
 
-		<p>This plot shows the temperature recorded by a temp sensor hooked up to an arduino.  The temperature is sent and recorded approximately once per minute, and the data is displayed here using Flask and Flot.</p>
+		<em>This plot shows the temperature recorded by a temp sensor hooked up to an arduino.  The temperature is sent and recorded approximately once per minute, and the data is displayed here using Flask and Flot. You can zoom in and out of the chart area using your mouse wheel and click-and-drag.</em>
 
-		<p>Currently the temperature sensor is not hooked up to an active fermentation, it is just monitoring ambient temperature in the kitchen (but we will be resolving that issue shortly). You can zoom in and out of the chart area using your mouse wheel and click-and-drag.</p>
+		<p>This profile is a test run of the sensor and was montiroing the ambient temperature in the room, not an active fermentation. This gives a good baseline for what the ambient temperature will look like, so I can compare the fluctuations in ambient due to space conditioning, with the fluctuations when it is hooked up to an actual fermentation.</p>
 
 		<p>To see other fermentation profiles, see the links below:</p>
 
-		<li><a href="{{ url_for('home_page') }}">Single Hop Simcoe</a></li>
+		<li><a href="{{ url_for('home_page') }}">Single Hop Cascade</a></li>
 
 	</div>
 
