--- a/templates/main1.html
+++ b/templates/main1.html
@@ -50,7 +50,7 @@
 <body>
 
 	<div id="header">
-		<h2>Single Hop (Simcoe) Pale Ale</h2>
+		<h2>Single Hop (Cascade) Pale Ale</h2>
 	</div>
 
 	<div id="content">
@@ -59,9 +59,9 @@
 			<div id="placeholder" class="demo-placeholder"></div>
 		</div>
 
-		<p>This plot shows the temperature recorded by a temp sensor hooked up to an arduino.  The temperature is sent and recorded approximately once per minute, and the data is displayed here using Flask and Flot.</p>
+		<em>This plot shows the temperature recorded by a temp sensor hooked up to an arduino.  The temperature is sent and recorded approximately once per minute, and the data is displayed here using Flask and Flot. You can zoom in and out of the chart area using your mouse wheel and click-and-drag.</em>
 
-		<p>Currently the temperature sensor is hooked up to a one gallon batch of a single hop pale ale.</p>
+		<p>Currently the temperature sensor is hooked up to a one gallon batch of a single hop pale ale.  The sensor was attached to the outside of the fermentation carboy, and I used a piece of packing foam to insulate the sensor from the ambient conditions.  Based on the fluctuations observed during the test run, it appears that the insulation is working as intended.</p>
 
 		<p>To see previous fermentation profiles, see the links below:</p>
 
