modified code to add another profile

--- a/templates/main1.html
+++ b/templates/main1.html
@@ -65,6 +65,8 @@
 
 		<p>To see previous fermentation profiles, see the links below:</p>
 
+		<li><a href="{{ url_for('home_page') }}">Imperial Stout</a></li>
+
 		<li><a href="{{ url_for('test_page') }}">Test Profile</a></li>
 
 	</div>
