--- a/templates/main.html
+++ b/templates/main.html
@@ -65,7 +65,9 @@
 
 		<p>To see other fermentation profiles, see the links below:</p>
 
-		<li><a href="{{ url_for('home_page') }}">Single Hop Cascade</a></li>
+		<li><a href="{{ url_for('home_page') }}">Imperial Stout</a></li>
+
+		<li><a href="{{ url_for('cascade_page') }}">Single Hop Cascade</a></li>
 
 	</div>
 
