--- a/templates/main2.html
+++ b/templates/main2.html
@@ -17,7 +17,8 @@
 
 		var d2 = {{ tempdata2 }}
 
-		var data = [ d1, d2 ],
+		var data = [ { label: "Fermentation Sensor", data: d1 },
+					 { label: "Ambient Temperature", data: d2 } ],
 			placeholder = $("#placeholder");
 
 		var plot = $.plot(placeholder, data, {
