added another page with two sensors, no longer updating the cascade fermentation profile

--- a/templates/main1.html
+++ b/templates/main1.html
@@ -67,6 +67,8 @@
 
 		<li><a href="{{ url_for('home_page') }}">Imperial Stout</a></li>
 
+		<li><a href="{{ url_for('sorachi_page') }}">Single Hop Sorachi</a></li>
+
 		<li><a href="{{ url_for('test_page') }}">Test Profile</a></li>
 
 	</div>
