--- a/templates/main3.html
+++ b/templates/main3.html
@@ -64,11 +64,11 @@
 
 		<em>This plot shows the temperature recorded by two temp sensors hooked up to an arduino.  The temperatures are sent and recorded approximately once per minute, and the data is displayed here using Flask and Flot. You can zoom in and out of the chart area using your mouse wheel and click-and-drag.</em>
 
-		<p>Currently the temperature sensors are hooked up to a five gallon batch of an imperial stout.  One sensor is attached to teh fermentation bicket, with some foam insulation on the back, and the other temperature sensor is recording the ambient conditions.</p>
+		<p>Currently the temperature sensors are hooked up to a one gallon batch of Single Hop (Sorachi Ace) Pale Ale.  I brewed two single hop batches in the same session (the other with Amarillo), and hooked up the fementation sensor to the Sorachi carboy.  The other sensor is monitoring ambient temperature.</p>
 
 		<p>To see other fermentation profiles, see the links below:</p>
 
-		<li><a href="{{ url_for('sorachi_page') }}">Single Hop Sorachi</a></li>
+		<li><a href="{{ url_for('home_page') }}">Imperial Stout</a></li>
 
 		<li><a href="{{ url_for('cascade_page') }}">Single Hop Cascade</a></li>
 
