--- a/templates/main3.html
+++ b/templates/main3.html
@@ -53,7 +53,7 @@
 <body>
 
 	<div id="header">
-		<h2>Imperial Stout</h2>
+		<h2>Single Hop Sorachi Ace Pale Ale</h2>
 	</div>
 
 	<div id="content">
