fixed some spelling errors in the html text

--- a/templates/main2.html
+++ b/templates/main2.html
@@ -64,7 +64,7 @@
 
 		<em>This plot shows the temperature recorded by two temp sensors hooked up to an arduino.  The temperatures are sent and recorded approximately once per minute, and the data is displayed here using Flask and Flot. You can zoom in and out of the chart area using your mouse wheel and click-and-drag.</em>
 
-		<p>Currently the temperature sensors are hooked up to a five gallon batch of an imperial stout.  One sensor is attached to teh fermentation bicket, with some foam insulation on the back, and the other temperature sensor is recording the ambient conditions.</p>
+		<p>Currently the temperature sensors are hooked up to a five gallon batch of an imperial stout.  One sensor is attached to the fermentation bucket, with some foam insulation on the back, and the other temperature sensor is recording the ambient conditions.</p>
 
 		<p>To see other fermentation profiles, see the links below:</p>
 
