added simple title to the html templates

--- a/templates/main3.html
+++ b/templates/main3.html
@@ -53,6 +53,7 @@
 <body>
 
 	<div id="header">
+		<h2>Beer Fermentation Temperature Monitor</h2>
 		<h2>Single Hop Sorachi Ace Pale Ale</h2>
 	</div>
 
