--- a/templates/main.html
+++ b/templates/main.html
@@ -50,7 +50,8 @@
 <body>
 
 	<div id="header">
-		<h2>Beer Fermentation Temperature Logger Test</h2>
+		<h2>Beer Fermentation Temperature Monitor</h2>
+		<h2>est Profile</h2>
 	</div>
 
 	<div id="content">
