--- a/templates/main1.html
+++ b/templates/main1.html
@@ -50,6 +50,7 @@
 <body>
 
 	<div id="header">
+		<h2>Beer Fermentation Temperature Monitor</h2>
 		<h2>Single Hop (Cascade) Pale Ale</h2>
 	</div>
 
