--- a/templates/main2.html
+++ b/templates/main2.html
@@ -53,8 +53,11 @@
 <body>
 
 	<div id="header">
+		<h2>Beer Fermentation Temperature Monitor</h2>
 		<h2>Imperial Stout</h2>
 	</div>
+
+
 
 	<div id="content">
 
