--- a/templates/main3.html
+++ b/templates/main3.html
@@ -69,7 +69,9 @@
 
 		<p>To see other fermentation profiles, see the links below:</p>
 
-		<li><a href="{{ url_for('home_page') }}">Imperial Stout</a></li>
+		<li><a href="{{ url_for('home_page') }}">Honey Ale</a></li>
+
+		<li><a href="{{ url_for('ip_page') }}">Imperial Stout</a></li>
 
 		<li><a href="{{ url_for('cascade_page') }}">Single Hop Cascade</a></li>
 
