--- a/templates/main2.html
+++ b/templates/main2.html
@@ -3,12 +3,12 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Beer Fermentation Logger</title>
-	<link href="http://www.flotcharts.org/flot/examples/examples.css" rel="stylesheet" type="text/css">
-	<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="http://www.flotcharts.org/flot/excanvas.min.js"></script><![endif]-->
-	<script language="javascript" type="text/javascript" src="http://www.flotcharts.org/flot/jquery.js"></script>
-	<script language="javascript" type="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
-	<script language="javascript" type="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.navigate.js"></script>
-	<script language="javascript" type="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.time.js"></script>
+	<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css">
+	<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="{{ url_for('static', filename='js/excanvas.min.js') }}"></script><![endif]-->
+	<script language="javascript" type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+	<script language="javascript" type="text/javascript" src="{{ url_for('static', filename='js/jquery.flot.js') }}"></script>
+	<script language="javascript" type="text/javascript" src="{{ url_for('static', filename='js/jquery.flot.navigate.js') }}"></script>
+	<script language="javascript" type="text/javascript" src="{{ url_for('static', filename='js/jquery.flot.time.js') }}"></script>
 	<script type="text/javascript">
 
 	$(function() {
