fixed a spelling error

--- a/templates/main.html
+++ b/templates/main.html
@@ -51,7 +51,7 @@
 
 	<div id="header">
 		<h2>Beer Fermentation Temperature Monitor</h2>
-		<h2>est Profile</h2>
+		<h2>Test Profile</h2>
 	</div>
 
 	<div id="content">
