added a new page for the barggot profile

--- a/templates/main1.html
+++ b/templates/main1.html
@@ -66,7 +66,9 @@
 
 		<p>To see previous fermentation profiles, see the links below:</p>
 
-		<li><a href="{{ url_for('home_page') }}">Honey Ale</a></li>
+		<li><a href="{{ url_for('home_page') }}">Braggot Beer</a></li>
+
+		<li><a href="{{ url_for('honey_page') }}">Honey Ale</a></li>
 
 		<li><a href="{{ url_for('ip_page') }}">Imperial Stout</a></li>
 
