--- a/templates/main4.html
+++ b/templates/main4.html
@@ -71,6 +71,8 @@
 
 		<p>To see other fermentation profiles, see the links below:</p>
 
+		<li><a href="{{ url_for('home_page') }}">Braggot Beer</a></li>
+
 		<li><a href="{{ url_for('sorachi_page') }}">Single Hop Sorachi</a></li>
 
 		<li><a href="{{ url_for('ip_page') }}">Imperial Stout</a></li>
